2.4.2
 - schema mapping

2.4.1
 - multi-schema support
 - new feature "Expand all visible tables"
 - disabled associations are no longer hidden in tree view
 - minor bug fixes

2.4.1.beta
 - basic multi-schema support
 - new feature "Expand all visible tables" 
 - disabled associations are no longer hidden in tree view
 - minor bug fixes

2.4.0
 - template based SQL-to-XML mapping
 - rendering of table details
 - improved tutorials

2.3.0
 - exports data to hierarchically structured XML

2.3.0_beta
 - exports data to hierarchically structured XML. Currently in beta, needs testing.

2.2.3
 - improved documentation
 - minor bug fixes

2.2.2
 - improved logging

2.2.1
 - fixed a bug that occurred when more than one connection to dbms is used simultaniously during exportation due to lack of thread safeness of java.text.DateFormat

2.2.0
 - Graph-based extraction model editor
 - Improved documentation

2.1.8
 - fixed a bug concerning primary key columns of type DATE

2.1.8.rc(n)
 - fixed a bug concerning primary key columns of type DATE (release candidate)

2.1.7
 - fixed a bug concerning incompatibilities with Oracle 10g

2.1.6
 - fixed a bug concerning incompatibilities with MySQL

2.1.5
 - minor bug-fixes

2.1.4
 - included documentation

2.1.3
 - GUI improvements
 - automatic update recognition

2.1.2
 - fixed a bug concerning entities of different type having the same primary-key

2.1.1
 - minor bug-fixes

2.1
 - Support for CLOB/BLOB

2.0
 - New full-featured Graphical User Interface
   - Extraction Model Editor
   - Data Model Editor
   - DB Introspector

1.0.1
 - Fixed a bug in file-selector on windows platform

1.0
 - Graphical User Interface
 - bugfixes

0.9.5
- made Jailer compatible with Firebird DBMS.
- better logging and error handling.
- improved HTML rendering.

0.9.4
- Means for modeling domains and composites.

0.9.3
- HTML rendering of data model.

0.9.2
- minor bugfixes.
- improved documentation.
- changed model file-format slightly, 